--- a/angular-web-app/src/app/components/_layout/header/header.component.scss
+++ b/angular-web-app/src/app/components/_layout/header/header.component.scss
@@ -3,11 +3,10 @@
 header.masthead {
   height: 100vh;
   margin-bottom: 60px;
-  background:
-    linear-gradient(to bottom, rgba(black, 0.9) 0%, rgba(black, 0.5) 100%),
-    url("../../../../assets/img/dessertcar.jpg")
-    no-repeat scroll 50%;
+  background-repeat: no-repeat;
+  background-attachment: scroll;
   background-size: cover;
+  background-position: 50% 50%;
 }
 
 header.masthead h1 {
@@ -24,10 +23,10 @@ header.masthead h1 {
 
 header.smallhead {
   height: 60vh;
-  background:
-    linear-gradient(to bottom, rgba(black, 0.9) 0%, rgba(black, 0.5) 100%),
-    url("../../../../assets/img/dessertcar.jpg") no-repeat scroll center;
+  background-repeat: no-repeat;
+  background-attachment: scroll;
   background-size: cover;
+  background-position: 50% 50%;
 }
 
 header.smallhead h1 {
@@ -44,7 +43,7 @@ header.smallhead h1 {
 
 .scrolldown a {
   position: absolute;
-  bottom: 20px;
+  bottom: 15px;
   left: 50%;
   z-index: 2;
   display: inline-block;
