--- a/angular-web-app/src/styles.scss
+++ b/angular-web-app/src/styles.scss
@@ -1,3 +1,5 @@
+/* Imports */
+@import '~bootstrap/scss/bootstrap';
 @import "variables";
 
 /*************************************/
@@ -65,6 +67,10 @@ button::-moz-focus-inner {
 /**             Helpers             **/
 /*************************************/
 
+.linear-overlay {
+  background-image: linear-gradient(to bottom, rgba(black, 0.9) 0%, rgba(black, 0.5) 100%);
+}
+
 .flex-center {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -109,6 +115,7 @@ hr.divider {
   width: 3rem !important;
 }
 .icon-gradient {
+  background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -240,7 +247,7 @@ hr.divider {
 .animated-icon span {
   display: block;
   position: absolute;
-  background: $color-light;
+  background: $color-dark;
   height: 3px;
   width: 100%;
   border-radius: 9px;
@@ -302,3 +309,4 @@ hr.divider {
   top: 21px;
   left: 8px;
 }
+
