--- a/angular-web-app/src/app/components/_layout/header/header.component.scss
+++ b/angular-web-app/src/app/components/_layout/header/header.component.scss
@@ -55,6 +55,7 @@ header.smallhead h1 {
   text-decoration: none;
   transition: opacity .3s;
   padding-top: 60px;
+  cursor: pointer;
 }
 .scrolldown a:hover {
   opacity: .5;
