removed java backend and updated animations

--- a/angular-web-app/src/app/components/_layout/header/header.component.html
+++ b/angular-web-app/src/app/components/_layout/header/header.component.html
@@ -13,6 +13,8 @@
   </div>
   <!-- scrolldown -->
   <div class="scrolldown w-100" *ngIf="!small">
-    <a (click)="scrollDown()"><span></span></a>
+    <a (click)="scrollDown()">
+      <span id="scrolldown"></span>
+    </a>
   </div>
 </header>
