changed color palette

--- a/angular-web-app/src/app/app.component.html
+++ b/angular-web-app/src/app/app.component.html
@@ -1,6 +1,6 @@
 
 <!-- Site content -->
-<div id="site-content" [@routeAnimations]="prepareRoute(outlet)">
+<div id="site-content" class="theme-light" [@routeAnimations]="prepareRoute(outlet)">
   <!-- Router outlet -->
   <router-outlet #outlet="outlet"></router-outlet>
 </div>
