--- a/angular-web-app/src/app/components/featured/featured.component.html
+++ b/angular-web-app/src/app/components/featured/featured.component.html
@@ -7,8 +7,8 @@
         <h2 class="">{{painting.title}}</h2>
         <h6 class="font-italic mb-3 txt-primary">By Rolien Schrik.</h6>
         <p class="pt-2">{{getTrimmedDescription()}}</p>
-        <button mat-flat-button class="gradient-blue txt-light round-button mx-1">{{painting.paint}}</button>
-        <button mat-flat-button class="gradient-orange txt-light round-button mx-1">{{painting.category}}</button>
+        <button mat-flat-button class="gradient-primary txt-light round-button mx-1">{{painting.paint}}</button>
+        <button mat-flat-button class="gradient-secondary txt-light round-button mx-1">{{painting.category}}</button>
 <!--        <button mat-raised-button color="primary" (click)="goToPaintingDetails()">Details</button>-->
       </mat-card-content>
     </mat-card>
