--- a/angular-web-app/src/app/components/_layout/header/header.component.html
+++ b/angular-web-app/src/app/components/_layout/header/header.component.html
@@ -1,6 +1,8 @@
 <!-- Header-->
-<header id="header" [ngClass]="small ? 'smallhead' : 'masthead'" [style.backgroundImage]="'url(' + image + ')'">
-  <div class="container-fluid h-100 linear-overlay">
+<header id="header" class="rounded-bottom"
+[ngClass]="small ? 'smallhead' : 'masthead'" 
+[style.backgroundImage]="'url(' + image + ')'">
+  <div class="container-fluid h-100 linear-overlay-black">
     <div class="row h-100 align-items-center justify-content-center text-center">
       <div class="col-12 align-self-center">
         <h1 class="txt-light font-weight-bold">
