--- a/angular-web-app/src/app/components/_pages/painting-detail/painting-detail.component.html
+++ b/angular-web-app/src/app/components/_pages/painting-detail/painting-detail.component.html
@@ -4,7 +4,7 @@
 <!-- Painting -->
 <div *ngIf="painting">
   <!-- Header small -->
-  <app-header [title]="painting.title" [subTitle]="'Painting details'" [small]="true" [image]="painting.thumbnail"></app-header>
+  <app-header [title]="painting.title" [subTitle]="subTitle" [small]="true" [image]="painting.thumbnail"></app-header>
 
   <!-- Main -->
   <main class="main main-raised">
