--- a/angular-web-app/src/app/components/_layout/footer/footer.component.html
+++ b/angular-web-app/src/app/components/_layout/footer/footer.component.html
@@ -43,7 +43,7 @@
   <div class="py-3">
     <div class="container">
       <hr>
-      <div class="row flex-center">
+      <div class="row d-flex flex-row align-items-center justify-content-center">
         <div class="text-center">© 2020 Spavento Paintings.</div>
       </div>
     </div>
