--- a/angular-web-app/src/app/components/_layout/nav/nav.component.html
+++ b/angular-web-app/src/app/components/_layout/nav/nav.component.html
@@ -5,34 +5,40 @@
       <img src="/assets/img/favicon/favicon-96x96.png" alt="logo" class="navbar-brand-img">
       <span class="ml-2">Spavento</span>
     </a>
+
+    <!-- Collapse button -->
     <button id="navbarToggle" class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
       data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
-      aria-label="Toggle navigation" (click)="toggleIconOpen()">
-      <div id="animatedIcon" class="animated-icon"><span></span><span></span><span></span></div>
+      aria-label="Toggle navigation" (click)="toggleMenu()">
+      <!-- Icon -->
+      <div id="animatedIcon" class="animated-icon">
+        <span></span><span></span><span></span>
+      </div>
     </button>
-    <div class="collapse navbar-collapse" id="navbarResponsive">
+
+    <div [ngbCollapse]="isMenuCollapsed" class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav ml-auto my-2 my-lg-0">
         <li class="nav-item">
           <a class="nav-link nav-link-fade-up" data-toggle="collapse" data-target="#navbarResponsive.show"
-            routerLink="/home" routerLinkActive="router-link-active" (click)="removeIconOpen()">
+            routerLink="/home" routerLinkActive="router-link-active" (click)="closeMenu()">
             Home
           </a>
         </li>
         <li class="nav-item">
           <a class="nav-link nav-link-fade-up" data-toggle="collapse" data-target="#navbarResponsive.show"
-            routerLink="/portfolio" routerLinkActive="router-link-active" (click)="removeIconOpen()">
+            routerLink="/portfolio" routerLinkActive="router-link-active" (click)="closeMenu()">
             Portfolio
           </a>
         </li>
         <li class="nav-item">
           <a class="nav-link nav-link-fade-up" data-toggle="collapse" data-target="#navbarResponsive.show"
-            routerLink="/news" routerLinkActive="router-link-active" (click)="removeIconOpen()">
+            routerLink="/news" routerLinkActive="router-link-active" (click)="closeMenu()">
             News
           </a>
         </li>
         <li class="nav-item">
           <a class="nav-link nav-link-fade-up" data-toggle="collapse" data-target="#navbarResponsive.show"
-            routerLink="/contact" routerLinkActive="router-link-active" (click)="removeIconOpen()">
+            routerLink="/contact" routerLinkActive="router-link-active" (click)="closeMenu()">
             Contact
           </a>
         </li>
