--- a/angular-web-app/src/app/components/_pages/news/news.component.html
+++ b/angular-web-app/src/app/components/_pages/news/news.component.html
@@ -6,26 +6,30 @@
 
 <!-- Main -->
 <main id="news" class="main main-raised">
-
   <!-- News -->
   <section class="page-section bg-light">
     <div class="container">
-
       <app-section-title
         [title]="'News'"
         [subTitle]="'The lastest Spavento news'"
-        [text]="'Phasellus ultricies, nisi vitae rutrum hendrerit, justo nunc faucibus libero, vel suscipit nibh erat id arcu. Cras ac vehicula diam.'"
+        [text]="
+          'Phasellus ultricies, nisi vitae rutrum hendrerit, justo nunc faucibus libero, vel suscipit nibh erat id arcu. Cras ac vehicula diam.'
+        "
       ></app-section-title>
 
       <div class="row">
         <div class="col-12">
-            
+          <app-news-card></app-news-card>
+        </div>
+        <div class="col-12">
+          <app-news-card></app-news-card>
+        </div>
+        <div class="col-12">
+          <app-news-card></app-news-card>
         </div>
       </div>
-
     </div>
   </section>
-
 </main>
 
 <!-- Footer -->
