--- a/angular-web-app/src/styles.scss
+++ b/angular-web-app/src/styles.scss
@@ -64,6 +64,38 @@ button::-moz-focus-inner {
 }
 
 /*************************************/
+/**             Cards               **/
+/*************************************/
+
+.card-clean {
+  box-shadow: none !important;
+  background-color: transparent;
+}
+
+/*************************************/
+/**             Modal               **/
+/*************************************/
+
+.modal-header {
+  border-bottom: none !important;
+}
+.modal-footer {
+  border-top: none !important;
+}
+
+.transparent-modal .modal-content {
+  background-color: transparent;
+  border: none;
+}
+
+.img-modal {
+  max-width: 100%;
+  max-height: 70vh;
+}
+
+
+
+/*************************************/
 /**             Helpers             **/
 /*************************************/
 
@@ -81,19 +113,6 @@ button::-moz-focus-inner {
 }
 .linear-overlay-accent {
   background-image: linear-gradient(to bottom, rgba($color-accent, 0.9) 0%, rgba($color-accent, 0.5) 100%);
-}
-
-.flex-center {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  height: 100%;
 }
 
 .flex-spacer {
