--- a/angular-web-app/src/app/components/_layout/footer/footer.component.scss
+++ b/angular-web-app/src/app/components/_layout/footer/footer.component.scss
@@ -8,15 +8,9 @@
   bottom: 0;
 }
 
-.icon-facebook {
-  color: $color-facebook;
-}
-
-.icon-twitter {
-  color: $color-twitter;
-}
-
-.icon-instagram {
-  color: $color-instagram;
+.social-icon {
+  height: 2rem;
+  width: auto;
+  margin-right: 2rem;
 }
 
