--- a/angular-web-app/src/app/components/carousel-img/carousel-img.component.html
+++ b/angular-web-app/src/app/components/carousel-img/carousel-img.component.html
@@ -14,10 +14,10 @@
           <img class="carousel-image mat-elevation-z4" src="{{image}}" alt="thumbnail"/>
         </a>
       </div>
-      <button mat-fab NguCarouselNext color="" class="rightRs mat-elevation-z0" [style.opacity]="imageCarousel.isLast ? 0.5:1">
+      <button mat-fab NguCarouselNext class="rightRs mat-elevation-z0" [style.opacity]="imageCarousel.isLast ? 0.5:1">
         <mat-icon>keyboard_arrow_right</mat-icon>
       </button>
-      <button mat-fab NguCarouselPrev color="" class="leftRs mat-elevation-z0" [style.opacity]="imageCarousel.isFirst ? 0.5:1">
+      <button mat-fab NguCarouselPrev class="leftRs mat-elevation-z0" [style.opacity]="imageCarousel.isFirst ? 0.5:1">
         <mat-icon>keyboard_arrow_left</mat-icon>
       </button>
     </ngu-carousel>
