--- a/angular-web-app/src/app/components/gallery/gallery.component.html
+++ b/angular-web-app/src/app/components/gallery/gallery.component.html
@@ -41,7 +41,7 @@
           </button>
           <button
             mat-fab
-            color="accent"
+            color="primary"
             class="mx-2"
             aria-label="Show details"
             (click)="goToPaintingDetails(painting.id)"
