--- a/angular-web-app/src/app/components/gallery/gallery.component.scss
+++ b/angular-web-app/src/app/components/gallery/gallery.component.scss
@@ -27,7 +27,7 @@
   text-align: center;
   color: #fff;
   border-radius: 5px;
-  background-color: rgba($color-dark, 0.9);
+  background-color: rgba($color-secondary, 0.9);
   transition: opacity 0.25s ease;
   opacity: 0;
 }
