--- a/angular-web-app/src/app/components/latest/latest.component.html
+++ b/angular-web-app/src/app/components/latest/latest.component.html
@@ -4,10 +4,10 @@
   [dataSource]="paintings"
 >
   <div *nguCarouselDef="let painting" class="item p-3">
-    <a class="latest-box" (click)="goToPaintingDetails(painting.id)">
+    <div class="latest-box">
       <img
         class="latest-box-img mat-elevation-z4"
-        src="{{painting.thumbnail}}"
+        src="{{ painting.thumbnail }}"
         alt=""
       />
       <div class="latest-box-caption p-3">
@@ -16,29 +16,74 @@
           <hr class="divider mt-2" />
         </div>
         <div class="latest-project-category">
-          <span class="badge badge-pill bg-accent mr-2">{{
-            painting.paint
-          }}</span>
-          <span class="badge badge-pill bg-accent">{{
-            painting.category
-          }}</span>
+          <button
+            mat-fab
+            color="primary"
+            class="mx-2"
+            aria-label="Show image"
+            (click)="openImage(content)"
+          >
+            <mat-icon>search</mat-icon>
+          </button>
+          <button
+            mat-fab
+            color="primary"
+            class="mx-2"
+            aria-label="Show details"
+            (click)="goToPaintingDetails(painting.id)"
+          >
+            <mat-icon>more_horiz</mat-icon>
+          </button>
         </div>
       </div>
-    </a>
+    </div>
+
+    <!-- Modal -->
+    <ng-template #content let-modal>
+      <div class="modal-header">
+        <div></div>
+        <button mat-raised-button color="primary" (click)="modal.close()">
+          <mat-icon>close</mat-icon>
+        </button>
+      </div>
+
+      <div class="modal-body">
+        <div class="container">
+          <div class="row">
+            <div class="col-12">
+              <div class="d-flex align-items-center justify-content-center">
+                <img class="img-modal" src="{{ painting.thumbnail }}" alt="" />
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="modal-footer"></div>
+    </ng-template>
   </div>
 
-  <button mat-fab NguCarouselNext color="" class="rightRs mat-elevation-z0" [style.opacity]="latestCarousel.isLast ? 0.5:1">
+  <button
+    mat-fab
+    NguCarouselNext
+    class="rightRs mat-elevation-z0"
+    [style.opacity]="latestCarousel.isLast ? 0.5 : 1"
+  >
     <mat-icon>keyboard_arrow_right</mat-icon>
   </button>
-  <button mat-fab NguCarouselPrev color="" class="leftRs mat-elevation-z0" [style.opacity]="latestCarousel.isFirst ? 0.5:1">
+  <button
+    mat-fab
+    NguCarouselPrev
+    class="leftRs mat-elevation-z0"
+    [style.opacity]="latestCarousel.isFirst ? 0.5 : 1"
+  >
     <mat-icon>keyboard_arrow_left</mat-icon>
   </button>
 
-  <ul class="ngu-points" NguCarouselPoint>
+  <!-- <ul class="ngu-points" NguCarouselPoint>
     <li
-      *ngFor="let j of latestCarousel.pointNumbers; let i = index"
+      *ngFor="let j of latestCarousel.pointNumbers"
       [class.active]="j == latestCarousel.activePoint"
       (click)="latestCarousel.moveTo(j)"
     ></li>
-  </ul>
+  </ul> -->
 </ngu-carousel>
