--- a/angular-web-app/src/app/components/latest/latest.component.scss
+++ b/angular-web-app/src/app/components/latest/latest.component.scss
@@ -28,7 +28,7 @@
   opacity: 0;
   color: #fff;
   border-radius: 5px;
-  background-color: rgba($color-primary, 0.9);
+  background-color: rgba($color-secondary, 0.9);
   transition: opacity 0.25s ease;
   cursor: grab;
 }
@@ -43,47 +43,4 @@
 
 .latest-project-category {
   font-size: 1.2rem;
-}
-
-.leftRs {
-  position: absolute;
-  margin: auto;
-  top: 0;
-  bottom: 0;
-  left: 0;
-}
-
-.rightRs {
-  position: absolute;
-  margin: auto;
-  top: 0;
-  bottom: 0;
-  right: 0;
-}
-
-
-.ngu-points {
-  list-style-type: none;
-  text-align: center;
-  padding: 12px;
-  margin: 0;
-  white-space: nowrap;
-  overflow: auto;
-  box-sizing: border-box;
-}
-
-.ngu-points  li {
-  display: inline-block;
-  border-radius: 50%;
-  background: $color-dark;
-  padding: 5px;
-  margin: 0 4px;
-  transition-timing-function: cubic-bezier(.17,.67,.83,.67);
-  transition: .4s;
-  cursor: pointer;
-}
-.ngu-points  li.active {
-  box-shadow: 0 2px 1px -1px rgba(0,0,0,.2), 0 1px 1px 0 rgba(0,0,0,.14), 0 1px 3px 0 rgba(0,0,0,.12);
-  -webkit-transform: scale(1.7);
-  transform: scale(1.7);
 }
