--- a/angular-web-app/src/styles.scss
+++ b/angular-web-app/src/styles.scss
@@ -93,6 +93,51 @@ button::-moz-focus-inner {
   max-height: 70vh;
 }
 
+/*************************************/
+/**             Carousel            **/
+/*************************************/
+.leftRs {
+  position: absolute !important;
+  margin: auto !important;
+  top: 0 !important;
+  bottom: 0 !important;
+  left: 0 !important;
+}
+
+.rightRs {
+  position: absolute !important;
+  margin: auto !important;
+  top: 0 !important;
+  bottom: 0 !important;
+  right: 0 !important;
+}
+
+
+.ngu-points {
+  list-style-type: none;
+  text-align: center;
+  padding: 12px;
+  margin: 0;
+  white-space: nowrap;
+  overflow: auto;
+  box-sizing: border-box;
+}
+
+.ngu-points  li {
+  display: inline-block;
+  border-radius: 50%;
+  background: $color-dark;
+  padding: 5px;
+  margin: 0 4px;
+  transition-timing-function: cubic-bezier(.17,.67,.83,.67);
+  transition: .4s;
+  cursor: pointer;
+}
+.ngu-points  li.active {
+  box-shadow: 0 2px 1px -1px rgba(0,0,0,.2), 0 1px 1px 0 rgba(0,0,0,.14), 0 1px 3px 0 rgba(0,0,0,.12);
+  -webkit-transform: scale(1.7);
+  transform: scale(1.7);
+}
 
 
 /*************************************/
