added contact form

--- a/angular-web-app/src/app/components/_pages/contact/contact.component.html
+++ b/angular-web-app/src/app/components/_pages/contact/contact.component.html
@@ -7,8 +7,25 @@
 <!-- Main -->
 <main id="contact" class="main main-raised">
 
+    <!-- Contact -->
+    <section class="page-section bg-light">
+      <div class="container">
+        <app-section-title
+          [title]="'Contact'"
+          [subTitle]="'How to reach me'"
+        ></app-section-title>
+  
+        <div class="row">
+          <div class="col-md-6">
+            <app-contact-card></app-contact-card>
+          </div>
+        </div>
+  
+      </div>
+    </section>
+
   <!-- Location -->
-  <section class="page-section bg-light">
+  <section class="page-section">
     <div class="container">
 
       <app-section-title
@@ -26,22 +43,7 @@
     </div>
   </section>
 
-  <!-- Contact -->
-  <section class="page-section">
-    <div class="container">
-      <app-section-title
-        [title]="'Contact'"
-        [subTitle]="'How to reach me'"
-      ></app-section-title>
 
-      <div class="row">
-        <div class="col-lg-4 col-md-6 col-sm-12">
-          <app-contact-card></app-contact-card>
-        </div>
-      </div>
-
-    </div>
-  </section>
 
 </main>
 
