--- a/angular-web-app/src/app/components/section-title/section-title.component.html
+++ b/angular-web-app/src/app/components/section-title/section-title.component.html
@@ -5,8 +5,8 @@
     <h2>{{title}}</h2>
     <p *ngIf="text" class="txt-dark-muted">{{text}}</p>
   </div>
-  <div *ngIf="link" class="col-md-4 d-lg-flex align-items-center justify-content-end">
-    <a href="{{link}}" class="text-muted text-sm">
+  <div *ngIf="link" class="col-md-4 d-flex align-items-center justify-content-end">
+    <a href="{{link}}" class="txt-secondary text-sm">
       Show more
       <i class="fas fa-angle-double-right ml-2"></i>
     </a>
