--- a/angular-web-app/src/app/components/featured/featured.component.html
+++ b/angular-web-app/src/app/components/featured/featured.component.html
@@ -1,17 +1,59 @@
 <div class="row">
-
   <div class="col-12">
-    <mat-card id="featured-card" class="p-0 mx-4 mat-elevation-z2">
-      <img src="{{painting.thumbnail}}" class="featured-img mat-elevation-z8" alt="{{painting.title}}">
+    <mat-card id="featured-card" class="card-clean p-0 mx-4">
+      <img
+        src="{{ painting.thumbnail }}"
+        class="featured-img mat-elevation-z4"
+        alt="{{ painting.title }}"
+      />
       <mat-card-content class="p-4 text-center">
-        <h2 class="">{{painting.title}}</h2>
-        <h6 class="font-italic mb-3 txt-primary">By Rolien Schrik.</h6>
-        <p class="pt-2">{{getTrimmedDescription()}}</p>
-        <button mat-flat-button class="gradient-primary txt-light round-button mx-1">{{painting.paint}}</button>
-        <button mat-flat-button class="gradient-secondary txt-light round-button mx-1">{{painting.category}}</button>
-<!--        <button mat-raised-button color="primary" (click)="goToPaintingDetails()">Details</button>-->
+        <h2 class="">{{ painting.title }}</h2>
+        <h6 class="font-italic mb-3 txt-primary">By {{ painting.artist}}.</h6>
+        <p class="pt-2">{{ getTrimmedDescription() }}</p>
+        <div class="portfolio-project-buttons">
+          <button
+            mat-fab
+            color="accent"
+            class="mx-2"
+            aria-label="Show image"
+            (click)="openImage(content)"
+          >
+            <mat-icon>search</mat-icon>
+          </button>
+          <button
+            mat-fab
+            color="accent"
+            class="mx-2"
+            aria-label="Show details"
+            (click)="goToPaintingDetails()"
+          >
+            <mat-icon>more_horiz</mat-icon>
+          </button>
+        </div>
       </mat-card-content>
     </mat-card>
   </div>
-
 </div>
+
+<!-- Modal -->
+<ng-template #content let-modal>
+  <div class="modal-header">
+    <div></div>
+    <button mat-raised-button color="accent" (click)="modal.close()">
+      <mat-icon>close</mat-icon>
+    </button>
+  </div>
+
+  <div class="modal-body">
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <div class="d-flex align-items-center justify-content-center">
+            <img class="img-modal" src="{{ painting.thumbnail }}" alt="" />
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="modal-footer"></div>
+</ng-template>
