--- a/angular-web-app/src/app/components/latest/latest.component.html
+++ b/angular-web-app/src/app/components/latest/latest.component.html
@@ -18,7 +18,7 @@
         <div class="latest-project-category">
           <button
             mat-fab
-            color="primary"
+            color="accent"
             class="mx-2"
             aria-label="Show image"
             (click)="openImage(content)"
@@ -27,7 +27,7 @@
           </button>
           <button
             mat-fab
-            color="primary"
+            color="accent"
             class="mx-2"
             aria-label="Show details"
             (click)="goToPaintingDetails(painting.id)"
@@ -42,7 +42,7 @@
     <ng-template #content let-modal>
       <div class="modal-header">
         <div></div>
-        <button mat-raised-button color="primary" (click)="modal.close()">
+        <button mat-raised-button color="accent" (click)="modal.close()">
           <mat-icon>close</mat-icon>
         </button>
       </div>
