--- a/angular-web-app/src/app/components/latest/latest.component.scss
+++ b/angular-web-app/src/app/components/latest/latest.component.scss
@@ -28,7 +28,7 @@
   opacity: 0;
   color: #fff;
   border-radius: 5px;
-  background-color: rgba($color-secondary, 0.9);
+  background-color: rgba($color-primary, 0.9);
   transition: opacity 0.25s ease;
   cursor: grab;
 }
